# hassaniya-normaliser

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  LOGIN_AND_ADMIN_FUNCTIONALITY_GUIDE.md  MANIFEST.in  RAILWAY_DEPLOY.md  README.md  RENDER_DEPLOY.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  check_deployment.py  comprehensive_results.txt  comprehensive_test.py  dashboard_js_script.txt  debug_normalization.py  debug_test.py  final_git_status.txt  final_status.txt  git_status.txt  git_status_new.txt  install.bat  install.sh  output.txt  pyproject.toml  railway.toml  render-build.sh  render.yaml  requirements.txt  run-ui.ps1  run-ui.sh  server.py  server_backup_.py  server_output.txt  start.bat  start.sh  test_admin_functionality.py  test_deployment.py  test_exceptions.py  (+3 more)
.github/workflows/: ci.yml  deploy-pages.yml  deploy-serverless.yml
cli/: __main__.py
data/audio/: para_1__user_EMIN__20250625_091738.webm  para_3__user_EMIN__20250626_110949.webm  para_3__user_EMIN__20250626_111615.webm  para_3__user_EMIN__20250626_113207.webm  para_3__user_EMIN__20250626_115723.webm  para_3__user_EMIN__20250626_121845.webm  para_3__user_emin__20250625_062509.webm  para_3__user_emin__20250625_065444.webm  para_3__user_emin__20250625_072023.webm  para_3__user_emin__20250625_081904.webm  para_3__user_emin__20250625_082819.webm  para_4__user_EMIN__20250626_104903.webm  para_4__user_EMIN__20250626_112310.webm  para_4__user_EMIN__20250626_113638.webm  para_4__user_emin__20250625_065642.webm  para_4__user_emin__20250625_072109.webm  para_4__user_emin__20250625_081925.webm  para_5__user_EMIN__20250626_104924.webm  para_5__user_EMIN__20250626_113250.webm  para_6__user_EMIN__20250626_105751.webm  para_6__user_EMIN__20250626_105822.webm
scripts/: validate_data.py
src/hassy_normalizer/: __init__.py  cli.py  data_loader.py  diff.py  normalizer.py  rules.py
src/hassy_normalizer/data/: hassaniya_variants.jsonl  linked_words.json
src/hassy_normalizer/web_ui/: __init__.py  server.py
src/hassy_normalizer/web_ui/static/css/: style.css
src/hassy_normalizer/web_ui/static/js/: app.js
src/hassy_normalizer/web_ui/templates/: index.html
tests/: test_api.py  test_cli.py  test_diff.py  test_letter_rules.py  test_rules.py
